# Analysis

./: .gitignore  CMakeLists.txt
find_me_an_analysis/: CCNuECuts.h  CCNuMuCuts.h  GenericCuts.h  NCPiZeroCuts.h  Structs.h  TrueEventCategories.h  TrueNuVars.h  basic_ncpizero_selection.C  basic_nue_selection.C  basic_numu_selection.C  plot_a_selection.C  plot_event_categories.C
initial/: Binnings.C  NuEn.C  PlotShowerVars.C  RecoEff.C  RecoEffDriver.C
ncpizero/: GenericCuts.h  NCPiZeroCuts.h  NCPiZeroRecoVars.h  Structs.h  TrueEventCategories.h  ncpizero_selection.C  plot_a_selection.C  plot_features.C
ups/: product_deps
